@@ -969,17 +969,23 @@ bool wxMenu::MSWCommand(WXUINT WXUNUSED(param), WXWORD id_)
 
         // update the check item when it's clicked
         wxMenuItem * const item = FindItem(id);
-        if ( item && item->IsCheckable() )
+        if ( item )
         {
-            item->Toggle();
+            if ( (item->GetKind() == wxITEM_RADIO) && item->IsChecked() )
+                return true;
 
-            // Get the status of the menu item: note that it has been just changed
-            // by Toggle() above so here we already get the new state of the item.
-            //
-            // Also notice that we must pass unsigned id_ and not sign-extended id
-            // to ::GetMenuState() as this is what it expects.
-            UINT menuState = ::GetMenuState(GetHmenu(), id_, MF_BYCOMMAND);
-            checked = (menuState & MF_CHECKED) != 0;
+            if ( item->IsCheckable() )
+            {
+                item->Toggle();
+
+                // Get the status of the menu item: note that it has been just changed
+                // by Toggle() above so here we already get the new state of the item.
+                //
+                // Also notice that we must pass unsigned id_ and not sign-extended id
+                // to ::GetMenuState() as this is what it expects.
+                UINT menuState = ::GetMenuState(GetHmenu(), id_, MF_BYCOMMAND);
+                checked = (menuState & MF_CHECKED) != 0;
+            }
         }
 
         SendEvent(id, checked);
