@@ -141,6 +141,7 @@ wxMSW:
 - Fix appearance of checked disabled wxToolBar tools with custom images.
 - Fix reading of not NUL-terminated strings using wxRegKey (Steffen Olszewski).
 - Fix unexpected change in MDI children order after showing a file dialog.
+- Don't send events for already selected radio popup menu items (Kinaou Hervé).
 
 wxOSX/Cocoa:
 
